<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">L3 Thermal Camera Viewer</string>
    <string name="title_activity_settings">Settings</string>
    <string name="hello_world">Hello world!</string>    
    <string name="action_settings">Settings</string>
    <string name="pref_header_general">General</string>
    <string name="pref_default_IP_display_value">10.0.2.1</string>
    <string name="pref_d3_address_display_name">IP Address</string>
    <string name="pref_default_video_streamport_display_value">8554</string>
    <string name="pref_d3_video_streamport_display_name">Video Port</string>
    <string name="pref_d3_video_icdport_display_name">ICD Port</string>
    <string name="pref_default_video_icdport_display_value">8024</string>
    <string name="button_play">Play</string>
    <string name="button_stop">Stop</string>
    <string name="version">Beta Version</string>
    
    <string-array name="spinner_reticle_entries">
        <item>Reticle A</item>
        <item>Reticle B</item>
        <item>Reticle C</item>
        <item>Reticle D</item>
        <item>Reticle E</item>
    </string-array>
        <string name="icd_title">Camera Reticle Settings</string>
        <string name="selectTag">"select: "</string>
        <string name="btnSetReticleLabel">Set Reticle</string>
</resources>
