<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.d3engineering.ThermalCameraViewer.MainActivity" >
    
    <TextView
        android:id="@+id/textview_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:gravity="center_horizontal" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal" >

        <ImageButton
            android:id="@+id/button_play"
            android:layout_width="75dp"
            android:layout_height="31dp"
            android:contentDescription="@string/button_play"
            android:src="@android:drawable/ic_media_play"
            android:text="@string/button_play" />

        <ImageButton
            android:id="@+id/button_stop"
            android:layout_width="75dp"
            android:layout_height="31dp"
            android:contentDescription="@string/button_stop"
            android:src="@android:drawable/ic_media_pause"
            android:text="@string/button_stop" />
    </LinearLayout>
    
    <com.d3engineering.ThermalCameraViewer.GStreamerSurfaceView 
        android:id="@+id/surface_video"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|center_horizontal" />
    
    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:singleLine="true"
        android:text="@string/icd_title"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#000000"
        android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/selectTag"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <Spinner
                android:id="@+id/cbReticle"
                android:layout_width="wrap_content"
                android:layout_height="58dp"
                android:entries="@array/spinner_reticle_entries" />

        </LinearLayout>

        <Button
            android:id="@+id/btnReticleSend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnSetReticleLabel" />
    
</LinearLayout>
    